# libvio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bug.txt
core/: config_common.h  configfile.cc  configfile.h  dec_slice.cc  dec_slice.cpp  dec_slice.h  defines.h  entry.cc  erc_api.cc  erc_api.h  erc_do_i.cc  erc_do_p.cc  erc_do_p.cpp  global.h  ifunctions.h  image.cc  image.cpp  image.h  ldecod.cc  ldecod.cpp  main.cc  memalloc.h  picture.cc  win32.cc  win32.h
decoder/: blk_prediction.c  blk_prediction.h  block.c  block.h  deblock.cc  deblock_bs.cc  deblock_common.h  deblock_edge.cc  deblock_edge.cpp  inter_prediction.c  inter_prediction.cc  inter_prediction.h  inter_prediction_direct.cc  inter_prediction_mc.c  inter_prediction_mc.cc  inter_prediction_mc.h  inter_prediction_mc_direct.c  inter_prediction_mc_direct.cc  intra16x16_pred.c  intra16x16_pred.h  intra16x16_pred_mbaff.c  intra16x16_pred_normal.c  intra4x4_pred.c  intra4x4_pred.h  intra4x4_pred_mbaff.c  intra4x4_pred_normal.c  intra8x8_pred.c  intra8x8_pred.h  intra8x8_pred_mbaff.c  intra8x8_pred_normal.c  intra_chroma_pred.c  intra_chroma_pred_mbaff.c  intra_pred_common.c  intra_prediction.c  intra_prediction.cc  intra_prediction.h  intra_prediction_16x16.c  intra_prediction_16x16.cc  intra_prediction_16x16_mbaff.c  intra_prediction_16x16_mbaff.cc  (+47 more)
doc/: bugs-jm-18.5.txt  setup-test.md  setup-tests.md
parser/: annexb.cc  annexb.h  biaridecod.c  biaridecod.cc  biaridecod.h  bitstream.cc  bitstream.h  bitstream_annex_b.cc  bitstream_annex_b.h  bitstream_cabac.cc  bitstream_cabac.cpp  cabac.c  (+77 more)
(+321 files in other folders)
